    Before field save events allows changing the fields after their new values have been calculated
    Respondent changed events can be set at the organization level
    It is easier to change part of the display in ShowTrackTokenSnippet
Bugs
    Blocked users were not blocked
    The APC Cache was cleared incorrectly
    The var/tmp directory is created when needed and it does not exist
Testing:
    On acceptance and demonstration mail only respondent mails are bounce, staff mails are sent to receiver
    Administrators may now have the right to switch the used group to any they may set

Important changes from 1.8.0 => 1.8.1
============================================================
Round icons are now in the token table just like the round descriptions
Rounds can be sorted using drag and drop
Automatic email:
    Mail jobs are now executed in batch, one job at a time
    Individual jobs can be executed from the interface
    Jobs can be sorted manually using the sort button, check the sort order after upgrade!
Export:
    For survey responses, when available the respondent relation is exported (field name and relation id)
    Various bugfixes, check output carefully

Important changes from 1.7.1 => 1.8.0
============================================================
Searching for respondents by track or lack of track
Customize respondents screen using Snippets\Respondent\RespondentTableSnippet
Track structure can be exported, imported and merged with an existing track
Tracks answers, fields and rounds can be checked at the respondent and respondent track level
(Re)checking for answers now possible at the single token level
When using the gemsdata__responses table, views will be created for each survey
A new after completion event allows the setting of the informed consent through a survey
Fixed survey activation when survey not active in source
LimeSurvey equation questions now use help text for question or question code when empty