@@ -22,6 +22,12 @@
 class Gems_Snippets_Tracker_Fields_FieldReportSearchSnippet extends \Gems_Snippets_AutosearchFormSnippet
 {
     /**
+     *
+     * @var \Gems_User_User
+     */
+    protected $currentUser;
+
+    /**
      * Returns a text element for autosearch. Can be overruled.
      *
      * The form / html elements to search on. Elements can be grouped by inserting null's between them.
@@ -32,11 +38,18 @@ class Gems_Snippets_Tracker_Fields_FieldReportSearchSnippet extends \Gems_Snippe
      */
     protected function getAutoSearchElements(array $data)
     {
+        $orgs = $this->currentUser->getRespondentOrganizations();
+
         $elements[] = $this->_createSelectElement(
                 'gtf_id_track',
-                $this->util->getTrackData()->getAllTracks(),
+                $this->util->getTrackData()->getTracksForOrgs($orgs),
                 $this->_('(select a track)')
                 );
+
+        if (count($orgs) > 1) {
+            $elements[] = $this->_createSelectElement('gr2t_id_organization', $orgs, $this->_('(all organizations)'));
+            // $elements[] = $this->_createMultiCheckBoxElement('gr2t_id_organization', $orgs, $this->_('Toggle'), ' ');
+        }
 
         return $elements;
     }
